--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Taniku</h1>
     <a href="/about">Go to About</a>
 </body>
 </html>
