--- a/api/templates/price.html
+++ b/api/templates/price.html
@@ -38,7 +38,7 @@
     <div class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
       <!-- Seed Card Template -->
       <!-- Repeat for each seed -->
-      <div class="bg-white rounded-xl shadow p-4 border-2 hover:shadow-lg transition">
+      <div class="bg-white rounded-xl shadow p-4  hover:shadow-lg transition">
         <div class="flex justify-center mb-2">
           <img src="../../tumbuhan_senyum.png" alt="Plant" class="h-16" />
         </div>
@@ -65,7 +65,7 @@
         </div>
       </div>
 
-      <div class="bg-white rounded-xl shadow p-4 border-2 hover:shadow-lg transition">
+      <div class="bg-white rounded-xl shadow p-4  hover:shadow-lg transition">
         <div class="flex justify-center mb-2">
           <img src="../../tumbuhan_senyum.png" alt="Plant" class="h-16" />
         </div>
