add dashboard (unfinished)

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -2,9 +2,128 @@
 <html>
 <head>
     <title>Home</title>
+      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>  
-    <h1>Taniku</h1>
-    <a href="/about">Go to About</a>
+    <div class="bg-[#537D5D] w-full h-screen pt-28 lg:pt-40">
+        <div class="flex justify-center lg:text-5xl px-10 text-[#FFFFFF] font-bold ">
+            <h5>Modern Farming Solutions</h5>
+        </div>
+        <div class="flex justify-center lg:text-2xl text-center lg:px-44 px-10 mt-5 text-[#F0F7D2] text-xl " >
+           An integrated platform to help farmers increase yields, get the best seed recommendations, detect plant diseases, and connect with the market.
+        </div>
+        <div class="w-full flex justify-center items-center">
+            <button class="h-8 lg:w-[16%] w-2/5 text-center text-[#537D5D] font-bold rounded-md bg-white mt-5 shadow-md shadow-gray-600">
+                Get Started
+            </button>
+        </div>
+        <div class="flex justify-between ">
+            <div><img src="../static/flower.png" class="-scale-x-100" alt=""></div>
+            <div><img src="../static/flower.png"  alt=""></div>
+        </div>
+    </div>
+    <div class="lg:h-auto h-fit py-10 flex justify-center">
+        <div class=" mx-10">
+            <div class="flex justify-center text-3xl text-[#537D5D] font-bold ">
+                <h5>Main Feature</h5>
+            </div>
+            <div class="flex justify-center text-center px-8 mt-5 text-xl  text-gray-600" >
+                Improve your agricultural productivity with the latest technology
+            </div>
+            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div >
+                        <img src="../static/chart.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                    </div>
+                    <div class="w-3/4 ">
+                        <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
+                            <h5>Main Feature</h5>
+                        </div>
+                        <div class=" text-xs lg:text-base text-gray-600">
+                            Get the latest information on monthly harvest price trends with easy-to-understand visualizations. Plan your harvest time properly to maximize profits.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div >
+                        <img src="../static/hand_plant.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                    </div>
+                    <div class="w-3/4 ">
+                        <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
+                            <h5>Best Seed Recommendations</h5>
+                        </div>
+                        <div class=" text-xs lg:text-base text-gray-600">
+                            Our intelligent system will recommend the best seeds based on region, resources, and weather forecasts for up to one year ahead.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div >
+                        <img src="../static/find.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                    </div>
+                    <div class="w-3/4 ">
+                        <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
+                            <h5>Plant Disease Detection</h5>
+                        </div>
+                        <div class=" text-xs lg:text-base text-gray-600">
+                            Upload photos of your crops and our AI system will detect diseases and provide treatment recommendations.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="h-32 rounded-2xl bg-white mt-5 lg:mt-10 shadow-md shadow-gray-600">
+                <div class="flex w-full h-full justify-center lg:justify-start lg:pl-10 items-center gap-x-5">
+                    <div >
+                        <img src="../static/chat.png" class="w-7 h-7 lg:w-10 lg:h-10" alt="">
+                    </div>
+                    <div class="w-3/4 ">
+                        <div class="flex text-lg lg:text-2xl  text-[#537D5D] font-semibold ">
+                            <h5>Chatbot & Market</h5>
+                        </div>
+                        <div class=" text-xs lg:text-base text-gray-600">
+                            Ask our chatbot anything about farming and sell your harvest directly on our online market.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="h-fit py-10 bg-[#537D5D] pl-10 pr-32 lg:flex lg:justify-between">
+    <div class="mb-8 lg:w-[25%]">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+        <div class=" text-white">A modern agriculture platform to increase productivity and the welfare of Indonesian farmers.</div>
+    </div>
+    <div class="mb-8 ">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+        <div class=" text-white">
+            <ul>Harvest Price Trends</ul>
+            <ul>Best Seed Recomendations</ul>
+            <ul>Plant Disease Detection</ul>
+            <ul>Chatbot & Market</ul>
+        </div>
+    </div>
+    <div class="mb-8">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Help</div>
+        <div class=" text-white">
+            <ul>FAQ</ul>
+            <ul>User Guides</ul>
+            <ul>Contact Us</ul>
+            <ul>Privacy Policy</ul>
+        </div>
+    </div>
+    <div class="mb-8">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Contact</div>
+        <div class=" text-white">
+            <ul>FAQ</ul>
+            <ul>User Guides</ul>
+            <ul>Contact Us</ul>
+            <ul>Privacy Policy</ul>
+        </div>
+    </div>
+</div>
 </body>
 </html>
