--- a/api/templates/price.html
+++ b/api/templates/price.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 </head>
-<body>
+<body class="bg-[#F0F7D2] ">
   <!-- Chart Section -->
   <div class="flex flex-col items-center mt-16 px-4 md:px-28">
     <div class="mb-4 w-full text-center">
@@ -119,6 +119,39 @@
       </div>
     </div>
   </div>
+  <div class="h-fit py-10 bg-[#537D5D] pl-10 pr-32 lg:flex lg:justify-between">
+    <div class="mb-8 lg:w-[25%]">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+        <div class=" text-white">A modern agriculture platform to increase productivity and the welfare of Indonesian farmers.</div>
+    </div>
+    <div class="mb-8 ">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Si Panen</div>
+        <div class=" text-white">
+            <ul>Harvest Price Trends</ul>
+            <ul>Best Seed Recomendations</ul>
+            <ul>Plant Disease Detection</ul>
+            <ul>Chatbot & Market</ul>
+        </div>
+    </div>
+    <div class="mb-8">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Help</div>
+        <div class=" text-white">
+            <ul>FAQ</ul>
+            <ul>User Guides</ul>
+            <ul>Contact Us</ul>
+            <ul>Privacy Policy</ul>
+        </div>
+    </div>
+    <div class="mb-8">
+        <div class="mb-4 text-2xl font-semibold underline text-white">Contact</div>
+        <div class=" text-white">
+            <ul>FAQ</ul>
+            <ul>User Guides</ul>
+            <ul>Contact Us</ul>
+            <ul>Privacy Policy</ul>
+        </div>
+    </div>
+</div>
 </body>
 
 
