--- a/api/templates/price.html
+++ b/api/templates/price.html
@@ -22,7 +22,7 @@
       </h2>
     </div>
     <div class="w-full bg-white shadow-lg rounded-lg flex justify-center py-4 px-2">
-      <div class="w-full md:w-[85%] h-[300px] md:h-[400px]">
+      <div class="w-full md:w-[95%] h-[300px] md:h-[400px]">
         <canvas id="myChart" class="w-full h-full"></canvas>
       </div>
     </div>
@@ -44,8 +44,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">Ciherang Rice</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -58,8 +58,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">IR64 Rice</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -71,8 +71,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">Inpari 32 Rice</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -85,8 +85,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">Hybrid Corn P21</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -98,8 +98,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">Hybrid Corn P21</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -111,8 +111,8 @@
         </div>
         <h2 class="text-lg font-semibold text-center">Hybrid Corn P21</h2>
         <p class="text-sm text-center text-gray-600">Suitable for: Java, Sulawesi</p>
-        <p class="text-sm text-center text-gray-600">Harvest Time: 95–105 days</p>
-        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10–12 tons/ha</p>
+        <p class="text-sm text-center text-gray-600">Harvest Time: 95-105 days</p>
+        <p class="text-sm text-center text-gray-600 mb-2">Yield Potential: 10-12 tons/ha</p>
         <div class="flex justify-center text-yellow-400 text-xl">
           ★★★★★
         </div>
@@ -151,7 +151,7 @@
             <ul>Privacy Policy</ul>
         </div>
     </div>
-</div>
+  </div>
 </body>
 
 
