--- a/api/templates/seed.html
+++ b/api/templates/seed.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-[#F0F7D2] ">
 
-  <div class="items-center flex flex-col mt-16 mx-6 md:mx-28">
+  <div class="items-center flex flex-col mt-16 mx-6 md:px-28">
     <!-- Heading -->
     <div class="mb-4">
       <h1 class="text-2xl font-bold text-center text-[#537D5D]">Best Seed Recommendations</h1>
